objects/IDMS_EmailMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>AppLogoURL__c</fullName>
        <label>AppLogoURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AppLogo__c</fullName>
        <label>AppLogo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopyRightInformation__c</fullName>
        <label>CopyRightInformation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacebookUrl__c</fullName>
        <label>FacebookUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GoogleURL__c</fullName>
        <label>GoogleURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HeaderBGColor__c</fullName>
        <label>HeaderBGColor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCopyRightInfoVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCopyRightInfoVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExternalApplication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExternalApplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFacebookLogoVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFacebookLogoVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGoogleLogoVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsGoogleLogoVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSocialURLVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSocialURLVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTwitterLogoVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTwitterLogoVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsYouTubeLogoVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsYouTubeLogoVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedInURL__c</fullName>
        <label>LinkedInURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TwiiterURL__c</fullName>
        <label>TwiiterURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>YouTubeURL__c</fullName>
        <label>YouTubeURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>appBlogImageURL__c</fullName>
        <label>appBlogImageURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>appBlogURL__c</fullName>
        <label>appBlogURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>appTVImageURL__c</fullName>
        <label>appTVImageURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>appTVUrl__c</fullName>
        <label>appTVUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isAppBlogURLVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAppBlogURLVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAppTVURLVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAppTVURLVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isHeaderVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isHeaderVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLinkedinLogoVisble__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLinkedinLogoVisble</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLogoVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLogoVisible</label>
        <type>Checkbox</type>
    </fields>
    <label>IDMS_EmailMapping</label>
    <pluralLabel>IDMS_EmailMappings</pluralLabel>
</CustomObject>